reorganization; introduction of model.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"start":"node index"
 	},
 	"dependencies":{
-		"underscore":"*",
-		"tap":       "*"
+		"underscore":   "*",
+		"tap":          "*",
+		"configuration":"*"
 	}
 }
