work with tests, model

--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-	"name":        "hive-mvc",
-	"version":     "0.0.1",
-	"private":     false,
-	"scripts":     {
-		"start":"node index"
+	"name":         "hive-mvc",
+	"version":      "0.0.1",
+	"private":      false,
+	"scripts":      {
+		"start": "node index"
 	},
-	"dependencies":{
-		"underscore":   "*",
-		"tap":          "*",
-		"configuration":"*"
+	"dependencies": {
+		"underscore":     "*",
+		"tap":            "*",
+		"configuration":  "*",
+		"support":        "*",
+		"cli-table":      "*",
+		"mkdirp":         "*",
+		"rmdir":          "*",
+		"hive-component": "*",
+		"hive-loader":    "*"
 	}
 }
