--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"mkdirp":         "*",
 		"rmdir":          "*",
 		"hive-component": "*",
-		"hive-loader":    "*"
+		"hive-loader":    "*",
+		"async":          "*",
+		"gate":           "*"
+
 	}
 }
