expanded reach of static scanning

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 
 		"underscore": "*",
+		"underscore.string": "*",
 		"async":      "*",
 		"gate":       "*",
 		"tap":        "*",
