fixed package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name":         "hive-mvc",
-	"description":  "a high level framework for large scale sites"
+	"description":  "a high level framework for large scale sites",
 	"version":      "0.0.1a",
 	"private":      false,
 	"scripts":      {
