--- a/package.json
+++ b/package.json
@@ -1,34 +1,28 @@
 {
-	"name":        "hive-mvc",
-	"description": "a high level framework for large scale sites",
-	"version":     "0.0.2",
-	"private":     false,
-	"scripts":     {
-		"start": "node index"
-	},
-
-	"devDependencies": {
-		"tap": ">=0.3"
-	},
-	"dependencies":    {
-
-		"underscore.string": "*",
-		"async":             "~0.1.22",
-		"gate":              "~0.3.0",
-		"underscore":        "~1.4.4",
-
-		"mkdirp": ">=0.3.4",
-		"rmdir":  ">0.1",
-
-		"hive-configuration": ">=0.0.1a",
-		"hive-component":     ">=0.0.1a",
-		"hive-loader":        ">=0.0.2",
-		"hive-model":         ">=0.0.1f",
-
-		"support":   "~1.1.3",
-		"cli-table": "~0.2",
-
-		"request": "~2.12"
-
-	}
+  "name": "hive-mvc",
+  "description": "a high level framework for large scale sites",
+  "version": "0.0.3",
+  "private": false,
+  "scripts": {
+    "start": "node index"
+  },
+  "devDependencies": {
+    "tap": ">=0.3"
+  },
+  "dependencies": {
+    "underscore.string": "*",
+    "async": "~0.1.22",
+    "gate": "~0.3.0",
+    "underscore": "~1.4.4",
+    "mkdirp": ">=0.3.4",
+    "rmdir": ">0.1",
+    "hive-configuration": ">=0.0.1a",
+    "hive-component": ">=0.0.1a",
+    "hive-loader": ">=0.0.2",
+    "hive-model": ">=0.0.1f",
+    "support": "~1.1.3",
+    "cli-table": "~0.2",
+    "request": "~2.12",
+    "node-logger": "0.0.1"
+  }
 }
